# Version 0.5.0
- [#395] Create Curve tool which uses point as control handle.
- pdftops updated to version 3.04.
- [#306] Layout generator optimization. Divide into strips.
- Fixed case with duplicate names of curves if they connect same points.
- [#216] Better powerful way creation curved path.
- Improved exporting to dxf. QPainterPath export as Polyline.
- Show additional message dialog if measurements was changed. Related to issue [#440].
- [#132] Intersect Curves.
- Added language Chinese (China) and Portuguese (Brazil).
- New icon for VAL file. Updated Tape logo. Updated ico for standard measurements.
- [#325] Check pattern for inverse compatibility.
- [#385] Add 'Open Recent' option in Tape.exe, 'File' dropdown menu.

# Version 0.4.4
- Fixed issue with deleting detail nodes.
- [#458] Issue with segment of curve.
- Fixed disappearing curve if start and finish points of a segment are equal.
- Fixed bug case where an open equidistant point is too far from a main path.
- Fixed wrong handling with true darts points inside tool detail.

# Version 0.4.3 March 6, 2016
- [#456] Crash: broken formula + clicking on the f(x) symbol.
- [#454] Crash: using CRTL+Z while using line tool
- Fixed broken saving pattern description.
- Fixed UI bug. Release a dialog size for deploying a formula field.
- Fixed broken formula when for system locale thousand separator is a space.
- Using QGraphicsScene instead of VMainGraphicsScene caused a crash.
- Fixed bug disabling tool True darts.
- Fixed wrong calculation tool True darts.
- [#405] Fixed crash after deleting first pattern piece in the list.
- [#421] Fixed warning: unable to set geometry.

# Version 0.4.2 February 17, 2016
- Measurement Diagram is not shown on Mac OS X.
- In dialog 'tool Spline Path' fixed broken selecting new point into the list of points.
- Regesign dialogs tool 'Spline' and 'Spline Path' for avoiding text squeeze.
- Fixed getting correct reversed segment for single in the list curve.